Fix svg-text aligning problem
The svg image had a bug. When you add one near (or as in this case, inside) the link tag it is not aligned with the image itself. Applying vertical align property to svg solves this issue. Also the link tag has to be reduced in size or otherwise the link would activate all around the grid row.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 *{
     border: 2px solid red;
+    margin:5px
+}
+
+svg{
+    width:20px;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: middle;
 }
 
 body,html{
@@ -31,8 +41,10 @@ body{
     grid-row: 1/3;
 }
 
-
-.dashboard h1,
 .dashboard a{
-    padding-left: 30px;
+    width:60px;
+    height: 20px;
+    display: inline-block;
 }
+
+
